--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OriginalMagic8Ball</string>
+    <string name="app_name">Magic 8 Ball</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
